// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell should render cell correctly 1`] = `
<DocumentFragment>
  <div
    class="css-1nepleg"
    data-testid="1,1"
    role="cell"
  >
    0
  </div>
</DocumentFragment>
`;

exports[`Cell should render cell correctly 2`] = `
<DocumentFragment>
  <div
    class="css-vplidk"
    data-testid="1,1"
    role="cell"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Cell should render cell correctly 3`] = `
<DocumentFragment>
  <div
    class="css-1nu51kw"
    data-testid="1,1"
    role="cell"
  >
    2
  </div>
</DocumentFragment>
`;

exports[`Cell should render cell correctly 4`] = `
<DocumentFragment>
  <div
    class="css-u0ep03"
    data-testid="1,1"
    role="cell"
  >
    3
  </div>
</DocumentFragment>
`;

exports[`Cell should render cell correctly 5`] = `
<DocumentFragment>
  <div
    class="css-n73tcv"
    data-testid="1,1"
    role="cell"
  >
    4
  </div>
</DocumentFragment>
`;

exports[`Cell should render cell correctly 6`] = `
<DocumentFragment>
  <div
    class="css-sch5pe"
    data-testid="1,1"
    role="cell"
  >
    5
  </div>
</DocumentFragment>
`;

exports[`Cell should render cell correctly 7`] = `
<DocumentFragment>
  <div
    class="css-6bvi5f"
    data-testid="1,1"
    role="cell"
  >
    6
  </div>
</DocumentFragment>
`;

exports[`Cell should render cell correctly 8`] = `
<DocumentFragment>
  <div
    class="css-1nesmyp"
    data-testid="1,1"
    role="cell"
  >
    7
  </div>
</DocumentFragment>
`;

exports[`Cell should render cell correctly 9`] = `
<DocumentFragment>
  <div
    class="css-3j0u2g"
    data-testid="1,1"
    role="cell"
  >
    8
  </div>
</DocumentFragment>
`;

exports[`Cell should render cell correctly 10`] = `
<DocumentFragment>
  <div
    class="css-ojvuy5"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-b14p9c"
      data-testid="bomb_1,1"
    />
  </div>
</DocumentFragment>
`;

exports[`Cell should render cell correctly 11`] = `
<DocumentFragment>
  <div
    class="css-1hlwmkj"
    data-testid="1,1"
    role="cell"
  >
    10
  </div>
</DocumentFragment>
`;

exports[`Cell should render cell correctly 12`] = `
<DocumentFragment>
  <div
    class="css-1hlwmkj"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-17d1tii"
      data-testid="flag_1,1"
    >
      11
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cell should render cell correctly 13`] = `
<DocumentFragment>
  <div
    class="css-1hlwmkj"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-789mm"
      data-testid="weakFlag_1,1"
    />
  </div>
</DocumentFragment>
`;

exports[`Cell should render closed frame correctly 1`] = `
<DocumentFragment>
  <div
    class="css-avshaz"
  />
</DocumentFragment>
`;

exports[`Cell should render closed frame correctly 2`] = `
<DocumentFragment>
  <div
    class="css-avshaz"
  />
</DocumentFragment>
`;

exports[`Cell should render closed frame correctly 3`] = `
<DocumentFragment>
  <div
    class="css-avshaz"
  />
</DocumentFragment>
`;

exports[`Cell should render closed frame correctly 4`] = `
<DocumentFragment>
  <div
    class="css-avshaz"
  />
</DocumentFragment>
`;

exports[`Cell should render closed frame correctly 5`] = `
<DocumentFragment>
  <div
    class="css-avshaz"
  />
</DocumentFragment>
`;

exports[`Cell should render closed frame correctly 6`] = `
<DocumentFragment>
  <div
    class="css-avshaz"
  />
</DocumentFragment>
`;

exports[`Cell should render closed frame correctly 7`] = `
<DocumentFragment>
  <div
    class="css-avshaz"
  />
</DocumentFragment>
`;

exports[`Cell should render closed frame correctly 8`] = `
<DocumentFragment>
  <div
    class="css-avshaz"
  />
</DocumentFragment>
`;

exports[`Cell should render closed frame correctly 9`] = `
<DocumentFragment>
  <div
    class="css-avshaz"
  />
</DocumentFragment>
`;

exports[`Cell should render closed frame correctly 10`] = `
<DocumentFragment>
  <div
    class="css-avshaz"
  />
</DocumentFragment>
`;

exports[`Cell should render closed frame correctly 11`] = `
<DocumentFragment>
  <div
    class="css-avshaz"
  />
</DocumentFragment>
`;

exports[`Cell should render closed frame correctly 12`] = `
<DocumentFragment>
  <div
    class="css-avshaz"
  />
</DocumentFragment>
`;

exports[`Cell should render closed frame correctly 13`] = `
<DocumentFragment>
  <div
    class="css-avshaz"
  />
</DocumentFragment>
`;
